# PP-Downloader

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  readme.md  reset.sh  run.sh
music/: playlists.json.example
pp_downloader/: main.py
